--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 	width: 250px;
 	margin-top: 20px;
 	margin-left: 10px;
+	margin-bottom: 20px;
 	background-color: #6441A4;
 }
 
 .reddit {
 	height: 250px;
 	width: 250px;
-	margin-top: -790px;
+	margin-top: -810px;
 	margin-left: 275px;
 	background-color: #FF5700;
 }
@@ -56,13 +57,14 @@
 	width: 250px;
 	margin-top: 20px;
 	margin-left: 275px;
+	margin-bottom: 20px;
 	background-color: #28e050;
 }
 
 .amazon {
 	height: 250px;
 	width: 250px;
-	margin-top: -790px;
+	margin-top: -810px;
 	margin-left: 540px;
 	background-color: #ebebeb;
 }
@@ -79,12 +81,13 @@
 	width: 250px;
 	margin-top: 20px;
 	margin-left: 540px;
+	margin-bottom: 20px;
 	background-color: rgb(52, 189, 98);
 }
 .google {
 	height: 250px;
 	width: 250px;
-	margin-top: -790px;
+	margin-top: -810px;
 	margin-left: 805px;
 	background-color: rgb(235, 222, 44);
 }
