--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	margin-top: -810px;
 	margin-left: 1070px;
 	margin-bottom: 20px;
-	background-color: #f5b609;
+	background-color: #2500f8;
 }
     </style>
 </head>
@@ -159,7 +159,7 @@
             <a href="https://cvinformatica.eug.es" style="display:block;height:100%;width:100%"></a> 
         </div>
 	<div class="disney">
-            <a href="https://cvinformatica.eug.es" style="display:block;height:100%;width:100%"></a> 
+            <a href="https://www.disneyplus.com" style="display:block;height:100%;width:100%"></a> 
         </div>
     </div>
 </body>
