--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	margin-top: -810px;
 	margin-left: 1070px;
 	margin-bottom: 20px;
-	background-color: #2500f8;
+	background-color: #5338ee;
 }
     </style>
 </head>
