--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      /* Si necessiteu utilitzar CSS el podeu posar aquí mateix, no cal un full d'estils a part */
     
     body {
-	background-color: #0f0f0f;
+	background-color: #ffffff;
     }
 
 .youtube {
@@ -66,7 +66,7 @@
 	width: 250px;
 	margin-top: -810px;
 	margin-left: 540px;
-	background-color: #ebebeb;
+	background-color: #c7c3c3;
 }
 
 .netflix {
