--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      /* Si necessiteu utilitzar CSS el podeu posar aquí mateix, no cal un full d'estils a part */
     
     body {
-	background-color: #ffffff;
+	background-color: #242323;
     }
 
 .youtube {
