--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	margin-top: 20px;
 	margin-left: 10px;
 	background-color: #d12d28;
+	border-radius: 15%;
 }
 
 .twitter {
@@ -25,6 +26,7 @@
 	margin-top: 20px;
 	margin-left: 10px;
 	background-color: #1DA1F2;
+	border-radius: 15%;
 }
 
 .twitch {
@@ -34,6 +36,7 @@
 	margin-left: 10px;
 	margin-bottom: 20px;
 	background-color: #6441A4;
+	border-radius: 15%;
 }
 
 .reddit {
@@ -42,6 +45,7 @@
 	margin-top: -810px;
 	margin-left: 275px;
 	background-color: #FF5700;
+	border-radius: 15%;
 }
 
 .gmail {
@@ -50,6 +54,7 @@
 	margin-top: 20px;
 	margin-left: 275px;
 	background-color: #D44638;
+	border-radius: 15%;
 }
 
 .whatsapp {
@@ -59,6 +64,7 @@
 	margin-left: 275px;
 	margin-bottom: 20px;
 	background-color: #28e050;
+	border-radius: 15%;
 }
 
 .amazon {
@@ -67,6 +73,7 @@
 	margin-top: -810px;
 	margin-left: 540px;
 	background-color: #c7c3c3;
+	border-radius: 15%;
 }
 
 .netflix {
@@ -75,6 +82,7 @@
 	margin-top: 20px;
 	margin-left: 540px;
 	background-color: #E50914;
+	border-radius: 15%;
 }
 .primevideo {
 	height: 250px;
@@ -83,6 +91,7 @@
 	margin-left: 540px;
 	margin-bottom: 20px;
 	background-color: rgb(52, 189, 98);
+	border-radius: 15%;
 }
 .google {
 	height: 250px;
@@ -90,6 +99,7 @@
 	margin-top: -810px;
 	margin-left: 805px;
 	background-color: rgb(235, 222, 44);
+	border-radius: 15%;
 }
 
 .drive {
@@ -98,6 +108,7 @@
 	margin-top: 20px;
 	margin-left: 805px;
 	background-color: rgb(44, 229, 235);
+	border-radius: 15%;
 }
 .moodle {
 	height: 250px;
@@ -106,6 +117,7 @@
 	margin-left: 805px;
 	margin-bottom: 20px;
 	background-color: #f5b609;
+	border-radius: 15%;
 }  
 .disney {
 	height: 250px;
@@ -114,6 +126,7 @@
 	margin-left: 1070px;
 	margin-bottom: 20px;
 	background-color: #5338ee;
+	border-radius: 15%;
 }
     </style>
 </head>
