--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <a href="https://web.whatsapp.com" style="display:block;height:100%;width:100%"></a> 
         </div>
         <div class="amazon"> 
-            <a href="https://www.amazon.com" style="display:block;height:100%;width:100%"></a>
+            <a href="https://www.amazon.es" style="display:block;height:100%;width:100%"></a>
         </div>
         <div class="netflix">
             <a href="https://www.netflix.com/browse" style="display:block;height:100%;width:100%"></a> 
