--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 	margin-bottom: 20px;
 	background-color: #f5b609;
 }  
-.disney {
+.hbo {
 	height: 250px;
 	width: 250px;
 	margin-top: -810px;
 	margin-left: 1070px;
 	margin-bottom: 20px;
-	background-color: #5338ee;
+	background-color: #565352;
 }
     </style>
 </head>
@@ -158,8 +158,8 @@
 	<div class="moodle">
             <a href="https://cvinformatica.eug.es" style="display:block;height:100%;width:100%"></a> 
         </div>
-	<div class="disney">
-            <a href="https://www.disneyplus.com" style="display:block;height:100%;width:100%"></a> 
+	<div class="hbo">
+            <a href="https://es.hboespana.com" style="display:block;height:100%;width:100%"></a> 
         </div>
     </div>
 </body>
