--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	margin-bottom: 20px;
 	background-color: #565352;
 }
-.hbo {
+.spotify {
 	height: 250px;
 	width: 250px;
 	margin-top: -810px;
@@ -168,6 +168,9 @@
         </div>
 	<div class="hbo">
             <a href="https://es.hboespana.com" style="display:block;height:100%;width:100%"></a> 
+        </div>
+	<div class="spotify">
+            <a href="https://www.spotify.com/es/" style="display:block;height:100%;width:100%"></a> 
         </div>
     </div>
 </body>
