--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	margin-top: 20px;
 	margin-left: 540px;
 	margin-bottom: 20px;
-	background-color: rgb(52, 189, 98);
+	background-color: #1764b6;
 }
 .google {
 	height: 250px;
